# tonic-server-side-batching

./: Cargo.toml  README.md
src/batch/: client.rs  server.rs
